Solve day 5